--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
     <header>
-        <img src="D:\Downloads\images-veed-remove-background.png" alt="Company Logo" style="width: 150px; height: 80px;">
+        <img src="images-veed-remove-background.png" alt="Company Logo" style="width: 150px; height: 80px;">
         <h1>SHREE JEE UDYOG</h1>
     </header>
     <nav>
